@@ -1,5 +1,7 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2004-05-17 patrickh Use UuidCreate() on Windows to generate GUIDs.
+                    NEW VERSION: 0.36.1
 2004-05-08 patrickh Changed vpr::InetAddr::getHostname() to return something
                     meaningful if the hostname lookup fails.
                     NEW VERSION: 0.36.0
